<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:title="@string/home"
        android:orderInCategory="101"
        android:icon="@drawable/home"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_add"
        android:title="@string/add"
        android:orderInCategory="102"
        android:icon="@drawable/add2"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_instructions"
        android:title="@string/instructions"
        android:orderInCategory="103"
        android:icon="@drawable/instructions"
        app:showAsAction="always"></item>
    <item
        android:id="@+id/action_help"
        android:title="@string/help"
        android:orderInCategory="104"
        android:icon="@drawable/help"
        app:showAsAction="ifRoom"></item>
</menu>