<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="Instructions">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:text="@string/instructions1"
        android:textAppearance="@android:style/TextAppearance.Medium" />

    <TextView
        android:id="@+id/instructionsTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/instructions2"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions3"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_below="@+id/instructionsTextView"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instructions4"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="69dp"
        android:text="@string/instructions5"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/closeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/close"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>